# linetracking

./: CMakeLists.txt  LICENSE  README.md  package.xml
install/: local_setup.sh  setup.sh
install/line_tracking/include/line_tracking/line_tracking/msg/: point_array.hpp  point_blob.h  point_blob.hpp  point_matrix_with_enum.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/line_tracking/include/line_tracking/line_tracking/msg/detail/: point_array__builder.hpp  point_array__functions.c  point_array__rosidl_typesupport_fastrtps_cpp.hpp  point_array__rosidl_typesupport_introspection_c.h  point_array__rosidl_typesupport_introspection_cpp.hpp  point_array__struct.h  point_array__struct.hpp  point_array__type_support.c  point_array__type_support.cpp  point_array__type_support.h  point_blob__functions.c  point_blob__struct.h  point_blob__type_support.c  point_blob__type_support.h  point_matrix_with_enum__rosidl_typesupport_introspection_c.h  point_matrix_with_enum__struct.h  point_matrix_with_enum__type_support.cpp
install/line_tracking/lib/line_tracking/: compressed_viewer  lane_follower
install/line_tracking/local/lib/python3.10/dist-packages/line_tracking/: _line_tracking_s.ep.rosidl_typesupport_c.c  _line_tracking_s.ep.rosidl_typesupport_fastrtps_c.c
install/line_tracking/local/lib/python3.10/dist-packages/line_tracking-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/line_tracking/local/lib/python3.10/dist-packages/line_tracking/msg/: _point_matrix_with_enum.py  _point_matrix_with_enum_s.c
install/line_tracking/share/ament_index/resource_index/parent_prefix_path/: line_tracking
install/line_tracking/share/ament_index/resource_index/rosidl_interfaces/: line_tracking
install/line_tracking/share/line_tracking/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/line_tracking/share/line_tracking/cmake/: ament_cmake_export_targets-extras.cmake  export_line_tracking__rosidl_generator_cExport.cmake  export_line_tracking__rosidl_generator_cppExport.cmake  export_line_tracking__rosidl_generator_pyExport-noconfig.cmake  export_line_tracking__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_line_tracking__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  line_tracking__rosidl_typesupport_cExport-noconfig.cmake  line_tracking__rosidl_typesupport_cExport.cmake  line_tracking__rosidl_typesupport_introspection_cExport-noconfig.cmake  line_tracking__rosidl_typesupport_introspection_cExport.cmake  line_tracking__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/line_tracking/share/line_tracking/msg/: PointBlob.msg  PointMatrixWithEnum.idl
install/turtle3_control/lib/turtle3_control/: detection  diff_node
install/turtle3_control/share/turtle3_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
msg/: PointMatrixWithEnum.msg
src/: compressed_viewer.cpp
src/compress_viewer/: compressed_viewer.cpp
src/lane_follower/: lane_follower.cpp  lane_math.cpp
src/lane_follower/include/: lane_math.hpp
src/line_detection/: line_detection.cpp  param_parser.cpp  vision_process.cpp
src/line_detection/config/: config.yaml
src/line_detection/include/: param_parser.hpp  vision_process.hpp
